<resources>
    <string name="app_name">Notes++</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- Menu List -->
    <string name="action_settings">Settings</string>
    <string name="action_share">Share</string>
    <string name="action_delete">Delete</string>
    <string name="action_trash">Trash</string>
    <string name="action_archive">Archive</string>
    <string name="action_restore">Restore</string>
    <string name="action_action_switchView">Switch View</string>

    <!-- IntroSlider Activity-->
    <string name="next">NEXT</string>
    <string name="skip">SKIP</string>
    <string name="start">GOT IT</string>

    <string name="slide_1_title">Notes On The Go</string>
    <string name="slide_1_desc">Access Anytime Anywhere \nwith Cloud Sync</string>

    <string name="slide_2_title">Multiple Device Sync</string>
    <string name="slide_2_desc">Get instant Notes access \nwith Multiple Devices</string>

    <string name="slide_3_title">Google SignIn</string>
    <string name="slide_3_desc">Fast Secure Reliable \nwith Google</string>

    <!--arrow left-->
    <!--<i class="material-icons">&#xE314;</i>-->
    <!--arroe right-->
    <!--<i class="material-icons">&#xE315;</i>-->

    <!-- Main Activity -->
    <string name="NOTE_ACTIVE">NoteList</string>
    <string name="NOTE_ARCHIVE">Archive</string>
    <string name="NOTE_TRASH">Trash</string>
    <string name="NOTE_RESTORE">Restore</string>
    <string name="NOTE_SHARE">Share</string>
    <string name="NOTE_DELETE">Delete</string>

    <!-- Create Note -->
    <string name="note_title_hint">Title</string>
    <string name="note_body_hint">Note</string>
    <string name="note_last_edited">Last Edited : 0/0/0 00:00</string>
    <string name="note_last_edited_start">Last Edited : </string>

    <string name="log_error_occurred">"Error occurred: "</string>
    <string name="loading">Loading…</string>

    <!-- Firebase Googl SignIn -->
    <string name="desc_google_sign_in">Use a Google Sign In credential to authenticate with Firebase.</string>


    <!-- About Activity -->
    <string name="companyName">Notes++ by KrazzyLabs</string>
    <string name="companyEmail">krazzylabs@gmail.com</string>
    <string name="version">Beta Version : </string>
    <string name="email">Email : </string>



</resources>
