<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />

    <item
        android:id="@+id/search"
        android:icon="@android:drawable/ic_search_category_default"
        android:orderInCategory="101"
        android:title="@string/action_share"
        app:showAsAction="always"
        app:actionViewClass="android.widget.SearchView"/>

    <item
        android:id="@+id/action_switchView"
        android:icon="@android:drawable/ic_menu_view"
        android:orderInCategory="101"
        android:title="@string/action_action_switchView"
        app:showAsAction="always" />
</menu>
