<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_delete"
        android:icon="@drawable/ic_action_delete"
        android:orderInCategory="101"
        android:title="@string/action_delete"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_trash"
        android:icon="@drawable/ic_action_trash"
        android:orderInCategory="101"
        android:title="@string/action_trash"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_archive"
        android:icon="@drawable/ic_action_archive"
        android:orderInCategory="101"
        android:title="@string/action_delete"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_restore"
        android:icon="@drawable/ic_action_restore"
        android:orderInCategory="101"
        android:title="@string/action_restore"
        app:showAsAction="always" />

</menu>